--- a/src/TodoSearch.css
+++ b/src/TodoSearch.css
@@ -6,3 +6,8 @@ input {
   font-size: 24px;
   padding: 14px 32px 14px 16px;
 }
+
+input:focus {
+  border: 1px solid #ff8000;
+  outline-color: #ff8000;
+}
